End of email part. Almost everything seems to work, check later (add more exception verbosity on html pages, maybe)